Added 'result' section in respiratory efficiency test

--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -1792,6 +1792,9 @@ Examination of respiratory system is carried out in the following lung areas.
 																	\paragraph{Procedure}
 																	Ask the subject to take a deep breath and then to blow hard into the mouth piece of the flow meter forcefully with his nostrils closed. The reading on the dial is the PEFR in litres/min. Repeat the procedure thrice at an interval of 1-2 minutes. Normal range is 300-500 litres/minute.}
 															\end{enumerate}
+															\section*{Result:}
+\vspace{1.5in}
+
 \section*{Questions:}
 \begin{enumerate}
 \item{ What is the normal breath holding time?}
