added tabbing environment to hayem's fluid section

--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -481,6 +481,18 @@
 					Microscope, Hemocytometer (RBC diluting pipette and counting chamber), RBC diluting fluid (Hayem’s fluid), spirit, cotton and lancet.
 
 					\section*{Hayem's Fluid - composition}
+					\vspace{-4mm}
+					\begin{tabbing}
+						Mercuric perchloride \= - \= 100 ml \= - \= Acts  as preservative, antifungal and antibacterial\kill\\
+
+						Sodium chloride \> - \> 0.5 $g$	\>- \>Maintains isotonicity\\
+
+						Mercuric perchloride \>- \>0.25 $g$ \>- \>Acts  as preservative, antifungal and antibacterial\\
+
+						Distilled water \> - \> 100 $ml$ \> - \> Acts as solvent\\
+
+					\end{tabbing}
+					\iffalse
 					\begin{itemize}
 							\itemsep0em
 
@@ -489,6 +501,7 @@
 						\item{		Mercuric perchloride - 0.25 g - Acts  as preservative, antifungal and antibacterial}
 						\item{		Distilled water - 100 ml - Acts as solvent}
 					\end{itemize}
+					\fi
 
 
 					\section*{Procedure}
