added blank pages at the end of each minor hematology experiment

--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -842,6 +842,7 @@ Number of cells in 1 $mm^3$ of undiluted blood \= = \= n$\times$$\frac{10}{9}$$\
 									\item{What are the differences between adult Hb \& fetal Hb?}
 									\item{What are the different RBC indices? What are their clinical significance?}
 								\end{enumerate}
+								\blankpageForAnswers
 								%-----}}}
 								%-------BloodGrouping---{{{
 								\addfig{%
@@ -894,6 +895,7 @@ Number of cells in 1 $mm^3$ of undiluted blood \= = \= n$\times$$\frac{10}{9}$$\
 										\item{What are the indications and hazards of blood transfusion?}
 										\item{What are the differences between ABO system and Rh system?}
 									\end{enumerate}
+									\blankpageForAnswers
 									%---------------}}}
 									%----BleedingTime---{{{
 									\addfig{%
@@ -942,6 +944,7 @@ Number of cells in 1 $mm^3$ of undiluted blood \= = \= n$\times$$\frac{10}{9}$$\
 											\item{Name few conditions where bleeding time is prolonged?}
 											\item{What is Thrombocytopenic purpura? Comment on the clotting time in this condition.}
 										\end{enumerate}
+										\blankpageForAnswers
 										%------------------------}}}
 										%------------ClottingTime---{{{
 										\addfig{%
@@ -995,6 +998,7 @@ Number of cells in 1 $mm^3$ of undiluted blood \= = \= n$\times$$\frac{10}{9}$$\
 												\item{What is an anticoagulant? Mention some invivo and invitro anticoagulants.}
 												\item{Name the proteins involved in fibrinolytic system.}
 											\end{enumerate}
+											\blankpageForAnswers
 											%--------}}}
 											%-----ESR------{{{
 											\addfig{%
@@ -1054,6 +1058,7 @@ Number of cells in 1 $mm^3$ of undiluted blood \= = \= n$\times$$\frac{10}{9}$$\
 													\item{Mention some physiological and pathological conditions in which ESR is increased / decreased?}
 													\item{What is zeta potential?}
 												\end{enumerate}
+												\blankpageForAnswers
 												%------------------------}}}
 												%---PackedCellVolume-{{{
 												\addfig{%
@@ -1098,6 +1103,7 @@ Number of cells in 1 $mm^3$ of undiluted blood \= = \= n$\times$$\frac{10}{9}$$\
 														\item{What is the ideal anti-coagulant used and why?}
 														\item{What is the difference between arterial and venous blood hematocrit?}
 													\end{enumerate}
+													\blankpageForAnswers
 													%-----------------}}}
 %---------OsmoticFragility---{{{
 													\addfig{%
